Android: input[type=date]: Update view if the value is updated by defaultValue setter

Thew new test is added to SmokeTests in order that Android build bots
run it.

Bug: 838898
Change-Id: I18f8320550a82fb5fddc0c98f0b8f0417f1e4d80
Reviewed-on: https://chromium-review.googlesource.com/1056947
Reviewed-by: Yoshifumi Inoue <yosin@chromium.org>
Commit-Queue: Kent Tamura <tkent@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558667}
Former-commit-id: a17bbb370bf5597c6d00f2ef6a8bea3ca6e16e38