third_party/blink/renderer/core/html/forms/chooser_only_temporal_input_type_view.h
@@ -54,6 +54,7 @@ class ChooserOnlyTemporalInputTypeView final
   // InputTypeView functions:
   void CreateShadowSubtree() override;
   void ClosePopupView() override;
+  void ValueAttributeChanged() override;
   void DidSetValue(const String&, bool value_changed) override;
   void HandleDOMActivateEvent(Event*) override;
   void UpdateView() override;
